# memoryweaver

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
.agents/skills/memoryweaver/: SKILL.md
.agents/skills/memoryweaver/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: memoryweaver-instincts.yaml
.codex/: AGENTS.md
src/: auto_extractor.py  config.py  file_injector.py  memory_engine.py  models.py  search_engine.py  server.py  storage.py
tests/: test_auto_extractor.py  test_config.py  test_file_injector.py  test_integration.py  test_memory_engine.py  test_models.py  test_search_engine.py  test_server.py  test_storage.py
